--- a/css/main.css
+++ b/css/main.css
@@ -805,8 +805,16 @@ body {
   color: var(--main-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .client__title {
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+}
+
 .client__list {
-  display: inline-flex;
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-left: -30px;
@@ -814,15 +822,28 @@ body {
 }
 
 .client__item {
+  width: calc((100% - 2 * 30px) / 2);
   margin-left: 30px;
   margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .client__item {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client__item {
+    width: calc((100% - 6 * 30px) / 6);
+  }
 }
 
 .client__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 210px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
